# confluent-kafka-producer

./: .env.example  .gitignore  main.py  pyproject.toml
confluent_kafka_producer/: main.py
confluent_kafka_producer/src/config/: kafka.py
confluent_kafka_producer/src/service/: producer.py
