[tool.poetry]
name = "confluent-kafka-producer"
version = "0.1.1"
description = ""
authors = ["Arigo.Fahreza <arigo@jkt1.ebdesk.com>"]
readme = "README.md"
packages = [{include = "confluent_kafka_producer"}]

[tool.poetry.dependencies]
python = "^3.10"
confluent-kafka = "^2.2.0"
pydantic = {extras = ["dotenv"], version = "^2.1.1"}
pandas = "^2.0.3"
loguru = "^0.7.0"
typer = {extras = ["all"], version = "^0.9.0"}
python-dotenv = "^1.0.0"
openpyxl = "^3.1.2"

[tool.poetry.scripts]
confluent_kafka_producer = 'confluent_kafka_producer.main:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


